--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "5",
+    "react-side-pane": "^2.4.6",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
